fix: fix the content distortion on initial load

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -22,4 +22,5 @@
 body {
   background-color: var(--clr-brandy-100);
   padding: 2rem;
+  overflow-x: hidden;
 }
